# Clients

./: __init__.py  postgredb.py  pyproject.toml  seisoparsing.py  vector.py
src/: __init__.py  responsivediscord.py  vectorclient.py
src/clients/: __init__.py  gdocs.py  vectorclient.py
src/clients/abstract/: __init__.py  vectorclient.py
src/clients/mailbox/: _email_transaction.py
src/clients/openai/: documentintelligence.py  vectorclient.py
src/clients/seiso/: parsing.py
src/clients/sqlalchemy/: __init__.py
src/examples/: constants.py
src/mailbox/: outlook.py
