[project]
name = "Clients"
version = "0.1.0"
description = "Various clients for various usage."
authors = [{ name = "Raphael Nguyen", email = "raph.nyn@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]  # Required for Poetry-specific settings
packages = [{ include = "clients", from = "src" }]
