[project]
name = "Clients"
version = "0.1.0"
description = "Various clients for various usage."
authors = [{ name = "Raphael Nguyen", email = "raph.nyn@gmail.com" }]
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/clients"]

[tool.hatch.build.targets.wheel]
include = ["src/clients"]

[tool.hatch.build.targets.wheel.sources]
"src/clients" = "clients"
